--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -47,7 +47,7 @@ jobs:
     runs-on: ${{ matrix.os }}-latest
     strategy:
       matrix:
-        os: ["ubuntu", "macos", "windows"]
+        os: ["debian", "macos", "windows"]
     defaults:
       run:
         shell: bash -l {0}
